@@ -16,7 +16,9 @@
 {% block content %}
     {% trans "Promoted search results" as sp_title_str %}
     {% trans "Add new promoted result" as sp_text_str %}
-    {% include "wagtailadmin/shared/header.html" with title=sp_title_str add_link="wagtailsearchpromotions:add" icon="pick" add_text=sp_text_str search_url="wagtailsearchpromotions:index" %}
+
+    {% url "wagtailsearchpromotions:add" as add_link %}
+    {% include "wagtailadmin/shared/header.html" with title=sp_title_str action_url=add_link icon="pick" action_text=sp_text_str search_url="wagtailsearchpromotions:index" %}
 
      <div class="nice-padding">
         <div id="editorspicks-results" class="redirects">
