@@ -7,6 +7,8 @@ Changelog
  * Removed support for Python 3.5
  * Reorganised Dockerfile in project template to follow best practices (Tomasz Knapik, Jannik Wempe)
  * Added filtering to locked pages report (Karl Hobley)
+ * Adds ability to view a group's users via standalone admin URL and a link to this on the group edit view (Karran Besen)
+ * Fix: Ensure link to add a new user works when no users are visible in the users list (LB (Ben Johnston))
 
 
 2.9 (xx.xx.xxxx) - IN DEVELOPMENT
